force-app/main/default/objects/custom_create8__c/custom_create8__c.object-meta.xml
<CustomObject>
    <label>Custom created object8</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects8</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>