force-app/main/default/objects/custom_create8__c/fields/custom_create_8field546__c.field-meta.xml
<CustomField>
    <fullName>custom_create_8field546__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 8field546</label>
    <type>Checkbox</type>
</CustomField>